--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,5 @@
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/game">Games</a></li>
-    </ul>
-</nav>
 <div>
-    <h2><%= message %></h2>
+    <h2>
+        <%= message %>
+    </h2>
 </div>
