started adding rom patcher

--- a/views/_layout.ejs
+++ b/views/_layout.ejs
@@ -5,6 +5,9 @@
         <%= locals['title'] || 'RomHacker Web' %>
     </title>
     <link rel="stylesheet" href="/style.css">
+    <!-- Built client-side libraries -->
+    <script src="/dist/main.js"></script>
+    <script src="/dist/rom-patcher.js"></script>
 </head>
 
 <body>
