--- a/views/_layout.ejs
+++ b/views/_layout.ejs
@@ -4,7 +4,19 @@
     <title>
         <%= locals['title'] || 'RomHacker Web' %>
     </title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link rel="stylesheet" href="/dist/nes.min.css">
     <link rel="stylesheet" href="/style.css">
+    <style>
+        html,
+        body,
+        pre,
+        code,
+        kbd,
+        samp {
+            font-family: "Press Start 2P", cursive;
+        }
+    </style>
     <!-- Built client-side libraries -->
     <script src="/dist/main.js"></script>
 </head>
